Changes in BradleyTerry2 1.0-6
==============================

Changes in behaviour
--------------------

    o	BTabilities now returns NA for unidentified abilities

Bug fixes
---------

    o	BTabilities now respects contrasts argument and contrasts attributes of
    	player1 and player2 factors.


Changes in BradleyTerry2 1.0-5
==============================

Bug fixes
---------

    o	no longer imports from gnm, so gnm need not be installed.


Changes in BradleyTerry2 1.0-4
==============================

Bug fixes
---------

    o	depends on lme4 (>=1.0).


Changes in BradleyTerry2 1.0-3
==============================

New Features
------------

    o	updated football data to include full 2011-12 season.


Changes in BradleyTerry2 1.0-2
==============================

New Features
------------

    o	added football example presented at useR! 2013 with generalised
    	Davidson model for ties.


Changes in BradleyTerry2 1.0-1
==============================

Bug fixes
---------

    o	renamed "glmmPQL" object "BTglmmPQL" to avoid conflict with lme4 
    	(which loads MASS).
    o	fixed BTm so that it is able to find variables when called inside
    	another function (stackoverflow.com question 14911525).
    	


Changes in BradleyTerry2 1.0-0
==============================


    o	updated references and CITATION to cite JSS paper on 
    	BradleyTerry2	



Changes in BradleyTerry2 0.9-7
==============================

Bug fixes
---------

    o	fixed anova.BTmlist to work for models with random effects

    o   allow models to be specified with no fixed effects


Improvements
------------

    o	updated vignette, including example of bias-reduction, a 
    	new example incorporating random effects and a new example
	on preparing data for use with package


Changes in BradleyTerry2 0.9-6
==============================

Bug fixes
---------

    o	fixed offset argument to work as documented

    o	corrected documentation for citations data

Improvements