@@ -1,11 +1,11 @@
 Package: BradleyTerry2
 Version: 1.0-6
-Date: 2015-02-03
+Date: 2015-02-06
 Title: Bradley-Terry Models
 Author: Heather Turner and David Firth
 Maintainer: Heather Turner <ht@heatherturner.net>
 URL: http://bradleyterry2.r-forge.r-project.org
-Description: Specify and fit the Bradley-Terry model and structured versions
+Description: Specify and fit the Bradley-Terry model, including structured versions in which the parameters are related to explanatory variables through a linear predictor and versions with contest-specific effects, such as a home advantage.
 Depends: R (>= 2.10), lme4 (>= 1.0)
 Imports: brglm, gtools, stats
 Suggests: prefmod
