@@ -10,6 +10,7 @@ S3method(add1, BTm)
 S3method(anova, BTm)
 S3method(drop1, BTm)
 S3method(formula, BTm)
+S3method(model.matrix, BTm)
 S3method(predict, BTm)
 S3method(predict, BTglmmPQL)
 S3method(print, BTm)
