@@ -1,7 +1,7 @@
 
-R version 3.0.1 (2013-05-16) -- "Good Sport"
-Copyright (C) 2013 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
+R Under development (unstable) (2015-02-07 r67757) -- "Unsuffered Consequences"
+Copyright (C) 2015 The R Foundation for Statistical Computing
+Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -22,6 +22,9 @@ Type 'q()' to quit R.
 > 
 > ## The final model in example(flatlizards)
 > library(BradleyTerry2)
+Loading required package: lme4
+Loading required package: Matrix
+Loading required package: Rcpp
 > data(flatlizards, package = "BradleyTerry2")
 > attach(flatlizards)
 > Whiting.model3 <- BTm(1, winner, loser, ~ throat.PC1[..] + throat.PC3[..] +
@@ -126,4 +129,4 @@ $se.fit
 > 
 > proc.time()
    user  system elapsed 
-  6.028   0.128   6.164 
+  6.312   0.192   6.498 
